# talent-copilot

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  USER_FLOWS.md  alembic.ini  pyproject.toml  requirements.txt
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: tests.yml
adr/: 20231119-use-backgroundtask-for-processes copy.md  20231120-dao-return-daomodel.md
cv_copilot/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py  tkq.py
cv_copilot/db/: base.py  dependencies.py  utils.py
cv_copilot/db/dao/: images.py  job_descriptions.py  parsed_job_description.py  parsed_text.py  pdfs.py  scores.py  texts.py
cv_copilot/db/migrations/: env.py
cv_copilot/db/migrations/versions/: 2023-11-26-10-44_cf8ebb9bba84.py  2023-11-29-11-07_58d7d9b60440.py  2023-11-29-12-41_2410a61e112e.py
cv_copilot/db/models/: __init__.py  images.py  job_descriptions.py  parsed_job_descriptions.py  parsed_texts.py  pdfs.py  scores.py  texts.py  users.py
cv_copilot/services/: __init__.py
cv_copilot/services/llm/: __init__.py  utils.py
cv_copilot/services/llm/models/: __init__.py  skills.py
cv_copilot/services/llm/prompt_templates/: __init__.py  cv.py  job_descriptions.py
cv_copilot/services/pdf/: __init__.py  manager.py  openai_integrations.py  pdf_processing.py  processing.py  workflow.py
cv_copilot/services/redis/: dependency.py  lifetime.py
cv_copilot/services/scorer/: __init__.py  main.py  score_calculation.py
cv_copilot/services/text/: __init__.py  extract.py  workflow.py
cv_copilot/services/text_processing/: cv_evaluation.py  prompt_templates.py  skills_extraction.py  workflow.py
cv_copilot/tests/: __init__.py  test_dummy.py  test_images.py  test_pdfs.py
cv_copilot/web/: __init__.py  application.py  lifetime.py
cv_copilot/web/api/: __init__.py  router.py
cv_copilot/web/api/docs/: __init__.py
cv_copilot/web/api/echo/: __init__.py  views.py
cv_copilot/web/api/job_descriptions/: __init__.py  schema.py  views.py
cv_copilot/web/api/monitoring/: __init__.py
cv_copilot/web/api/parsed_job_descriptions/: __init__.py  views.py
cv_copilot/web/api/parsed_texts/: __init__.py  views.py
cv_copilot/web/api/pdfs/: __init__.py  schema.py  views.py
cv_copilot/web/api/redis/: __init__.py  views.py
cv_copilot/web/api/scores/: __init__.py  views.py
cv_copilot/web/api/texts/: __init__.py  views.py
cv_copilot/web/api/users/: __init__.py  views.py
cv_copilot/web/dto/job_description/: __init__.py  schema.py
cv_copilot/web/dto/pdfs/: __init__.py  schema.py
cv_copilot/web/dto/scores/: __init__.py  schema.py
cv_copilot/web/dto/texts/: __init__.py  schema.py
cv_copilot/webapp/: job_descriptions.py  main.py  pdf_evaluation.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
